--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: home
 title: Latest Posts
-description: "The personal blog of Hossain Mohd. Faysal, a doctoral candidate in Electrical Engineering at University of Pennsylvania."
-headline: An Engineer's Diary
-tags: [Hossain, Mohd, Faysal, electrical, engineering, blog, university, pennsylvania, doha, Qatar]
+description: "The RailsBridge Chicago Blog"
+headline: Teaching ladies Rails--for free!
+tags: [Rails, RailsBridge, Chicago, women in tech, Ruby on Rails]
 ---
 {% if site.paginate %}
 	{% for post in paginator.posts %}
