--- a/about.html
+++ b/about.html
@@ -1,12 +1,20 @@
 ---
-layout: default
-title: Tom Preston-Werner
+layout: pageminimal
+title: "RailsBridge Chicago"
 ---
-<div id="home">
-<h1>Blog Posts</h1>
-<ul class="posts">
-{% for post in site.posts %}
-<li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-{% endfor %}
-</ul>
-</div>
+
+  <h3>Our next <b>free introductory Ruby on Rails workshop for women</b> will be:</h3>
+
+<h2><b>April 17 and 18, 2015</b> at <a href="http://enova.com">Enova</a> in 
+  downtown Chicago!</h2>
+<hr />
+<h3><a href="http://railsbridgechi.launchrock.com/">Sign up via LaunchRock</a> to be notified when registration is open</h3>
+
+<h4 style='text-align: right;'>
+Visit our <a href="https://www.bridgetroll.org/chapters/10">BridgeTroll</a> page for a schedule of events<br />
+  Join our <a href="http://www.meetup.com/RailsBridgeChicago/">Meetup
+    Group</a> to be notified of future workshops
+  <br />
+Email <a href="mailto:railsbridgechi@gmail.com">RailsBridgeChi@gmail.com</a> with questions</h4>
+<hr />
+<p><a href="http://railsbridge.org">RailsBridge</a> started in San Francisco in 2009 as a project to increase diversity in the Ruby community. And it's been wildly successful! The past six years have seen dozens of local chapters form, thousands of students learn to code, hundreds of volunteers donate their time, and a lot of new developer careers launch!</p> 
