--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@ title: "RailsBridge Chicago"
 <h2><b>April 17 and 18, 2015</b> at <a href="http://enova.com">Enova</a> in 
   downtown Chicago!</h2>
 <hr />
-<h3><a href="http://railsbridgechi.launchrock.com/">Sign up via LaunchRock</a> to be notified when registration is open</h3>
+<h3><a href="http://bridgetroll.org/chapters/10">Follow our chapter on BridgeTroll</a> to be notified when registration is open</h3>
 
 <h4 style='text-align: right;'>
-Visit our <a href="https://www.bridgetroll.org/chapters/10">BridgeTroll</a> page for a schedule of events<br />
-  Join our <a href="http://www.meetup.com/RailsBridgeChicago/">Meetup
-    Group</a> to be notified of future workshops
+  Email <a href="mailto:railsbridgechi@gmail.com">RailsBridgeChi@gmail.com</a> with questions
   <br />
-Email <a href="mailto:railsbridgechi@gmail.com">RailsBridgeChi@gmail.com</a> with questions</h4>
+  <a href="twitter.com/RailsBridgeChi">@RailsBridgeChi</a>
+</h4>
 <hr />
 <p><a href="http://railsbridge.org">RailsBridge</a> started in San Francisco in 2009 as a project to increase diversity in the Ruby community. And it&#8217;s been wildly successful! The past six years have seen dozens of local chapters form, thousands of students learn to code, hundreds of volunteers donate their time, and a lot of new developer careers launch!</p> 
