--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: "RailsBridge Chicago"
 <h4 style='text-align: right;'>
   Email <a href="mailto:railsbridgechi@gmail.com">RailsBridgeChi@gmail.com</a> with questions
   <br />
-  <a href="twitter.com/RailsBridgeChi">@RailsBridgeChi</a>
+  Follow <a href="http://twitter.com/RailsBridgeChi">@RailsBridgeChi</a> on Twitter
 </h4>
 <hr />
 <p><a href="http://railsbridge.org">RailsBridge</a> started in San Francisco in 2009 as a project to increase diversity in the Ruby community. And it&#8217;s been wildly successful! The past six years have seen dozens of local chapters form, thousands of students learn to code, hundreds of volunteers donate their time, and a lot of new developer careers launch!</p> 
