Add link to the blog, awww yisssss

--- a/index.html
+++ b/index.html
@@ -16,3 +16,4 @@ title: "RailsBridge Chicago"
 </h4>
 <hr />
 <p><a href="http://railsbridge.org">RailsBridge</a> started in San Francisco in 2009 as a project to increase diversity in the Ruby community. And it&#8217;s been wildly successful! The past six years have seen dozens of local chapters form, thousands of students learn to code, hundreds of volunteers donate their time, and a lot of new developer careers launch!</p> 
+<h2 class="text-center">Check out our <a href="{{ site.baseurl }}/blog">blog</a> for more news!</h2>
