--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@ title: "RailsBridge Chicago"
 <h2><b>April 17 and 18, 2015</b> at <a href="http://enova.com">Enova</a> in 
   downtown Chicago!</h2>
 <hr />
-<h3><a href="http://bridgetroll.org/chapters/10">Follow our chapter on BridgeTroll</a> to be notified when registration is open</h3>
+<h3><a href="http://bridgetroll.org/events/157">SIGN UP NOW</a> on BridgeTroll to attend as a student or volunteer as a TA!</h3> 
 
 <h4 style='text-align: right;'>
+  <a href="http://bridgetroll.org/chapters/10">Follow our chapter on BridgeTroll</a> to hear about future events <br />
   Email <a href="mailto:railsbridgechi@gmail.com">RailsBridgeChi@gmail.com</a> with questions
   <br />
   Follow <a href="http://twitter.com/RailsBridgeChi">@RailsBridgeChi</a> on Twitter
