--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@ title: "RailsBridge Chicago"
 ---
   <h3>Our next <b>free introductory Ruby on Rails workshop for women</b> will be:</h3>
 
-<h2><b>April 17 and 18, 2015</b> at <a href="http://enova.com">Enova</a> in 
-  downtown Chicago!</h2>
+<h2><b>This fall — TBD!</b> Stay tuned for more info!</h2>
 <hr />
-<h3><a href="http://bridgetroll.org/events/157">SIGN UP NOW</a> on BridgeTroll to attend as a student or volunteer as a TA!</h3> 
 
 <h4 style='text-align: right;'>
   <a href="http://bridgetroll.org/chapters/10">Follow our chapter on BridgeTroll</a> to hear about future events <br />
