--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ title: "RailsBridge Chicago"
 ---
   <h3>Our next <b>free introductory Ruby on Rails workshop for women</b> will be:</h3>
 
-<h2><b>December 4-5, 2015</b> at Braintree!</h2>
-<h3>Sign up <a href="https://www.bridgetroll.org/events/230">here</a></h3>
+  <h2><b>February 12-13, 2016</b> at the Chicago Innovation Exchange!</h2>
+<h3>Sign up <a href="https://www.bridgetroll.org/events/242">here</a></h3>
 <hr />
 
 <h4 style='text-align: right;'>
