--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 layout: pageminimal
 title: "RailsBridge Chicago"
 ---
-  <h3>Our next <b>free introductory Ruby on Rails workshop for women</b> will be:</h3>
+  <h3>Our next <b>free introductory Ruby on Rails workshop for women</b> has not yet been scheduled.</h3>
 
-  <h2><b>February 12-13, 2016</b> at the Chicago Innovation Exchange!</h2>
-<h3>Sign up <a href="https://www.bridgetroll.org/events/242">here</a></h3>
 <hr />
 
 <h4 style='text-align: right;'>
