Update workshop info for June

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 layout: pageminimal
 title: "RailsBridge Chicago"
 ---
-  <h3>Our next <b>free introductory Ruby on Rails workshop for women</b> has not yet been scheduled.</h3>
-
+<div style='text-align: center;'>
+  <h3>Our next <b>free introductory Ruby on Rails workshop for women</b> will be:</h3>
+  <h2><b>June 10-11, 2016</b> at Braintree! </h2>
+  <h3>Sign up <a href="https://www.bridgetroll.org/events/266">here</a></h3>
+</div>
 <hr />
 
 <h4 style='text-align: right;'>
