Link to meetup on the front page and update workshop info to tbd

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@ title: "RailsBridge Chicago"
 ---
 <div style='text-align: center;'>
   <h3>Our next <b>free introductory Ruby on Rails workshop for women</b> will be:</h3>
-  <h2><b>June 10-11, 2016</b> at Braintree! </h2>
-  <h3>Sign up <a href="https://www.bridgetroll.org/events/266">here</a></h3>
+  <h2><b>TBD:</b> we'll keep you posted via Meetup and Bridge Troll</h2>
 </div>
 <hr />
 
 <h4 style='text-align: right;'>
-  <a href="http://bridgetroll.org/chapters/10">Follow our chapter on BridgeTroll</a> to hear about future events <br />
+  <a href="http://www.meetup.com/railsbridgechicago">Follow our chapter on Meetup</a> to hear about all future events<br />
+  <a href="http://bridgetroll.org/chapters/10">Follow our chapter on Bridge Troll</a> to sign up for our weekend workshops<br />
   Email <a href="mailto:railsbridgechi@gmail.com">RailsBridgeChi@gmail.com</a> with questions
   <br />
   Follow <a href="http://twitter.com/RailsBridgeChi">@RailsBridgeChi</a> on Twitter
